--- a/product-detail-ties.html
+++ b/product-detail-ties.html
@@ -71,67 +71,67 @@
                         <div class="topbar-center marquee-wrapper">
                             <div class="initial-child-container">
                                 <div class="marquee-child-item">
-                                    <p>Return extended to 60 days</p>
+                                    <p>2 Piece Suit Deal</p>
                                 </div>
                                 <div class="marquee-child-item"><span class="dot"></span></div>
                                 <div class="marquee-child-item">
-                                    <p>Life-time Guarantes</p>
+                                    <p>Starts at $199.99</p>
                                 </div>
                                 <div class="marquee-child-item"><span class="dot"></span></div>
                                 <div class="marquee-child-item">
-                                    <p>Limited-Time Offer</p>
+                                    <p>2 Piece Suit Deal</p>
                                 </div>
                                 <div class="marquee-child-item"><span class="dot"></span></div>
                                 <!-- 2 -->
                                 <div class="marquee-child-item">
-                                    <p>Return extended to 60 days</p>
+                                    <p>Starts at $199.99</p>
                                 </div>
                                 <div class="marquee-child-item"><span class="dot"></span></div>
                                 <div class="marquee-child-item">
-                                    <p>Life-time Guarantes</p>
+                                    <p>2 Piece Suit Deal</p>
                                 </div>
                                 <div class="marquee-child-item"><span class="dot"></span></div>
                                 <div class="marquee-child-item">
-                                    <p>Limited-Time Offer</p>
+                                    <p>Starts at $199.99</p>
                                 </div>
                                 <div class="marquee-child-item"><span class="dot"></span></div>
                                 <!-- 3 -->
                                 <div class="marquee-child-item">
-                                    <p>Return extended to 60 days</p>
+                                    <p>2 Piece Suit Deal</p>
                                 </div>
                                 <div class="marquee-child-item"><span class="dot"></span></div>
                                 <div class="marquee-child-item">
-                                    <p>Life-time Guarantes</p>
+                                    <p>Starts at $199.99</p>
                                 </div>
                                 <div class="marquee-child-item"><span class="dot"></span></div>
                                 <div class="marquee-child-item">
-                                    <p>Limited-Time Offer</p>
+                                    <p>2 Piece Suit Deal</p>
                                 </div>
                                 <div class="marquee-child-item"><span class="dot"></span></div>
                                 <!-- 4 -->
                                 <div class="marquee-child-item">
-                                    <p>Return extended to 60 days</p>
+                                    <p>Starts at $199.99</p>
                                 </div>
                                 <div class="marquee-child-item"><span class="dot"></span></div>
                                 <div class="marquee-child-item">
-                                    <p>Life-time Guarantes</p>
+                                    <p>2 Piece Suit Deal</p>
                                 </div>
                                 <div class="marquee-child-item"><span class="dot"></span></div>
                                 <div class="marquee-child-item">
-                                    <p>Limited-Time Offer</p>
+                                    <p>Starts at $199.99</p>
                                 </div>
                                 <div class="marquee-child-item"><span class="dot"></span></div>
                                 <!-- 5 -->
                                 <div class="marquee-child-item">
-                                    <p>Return extended to 60 days</p>
+                                    <p>2 Piece Suit Deal</p>
                                 </div>
                                 <div class="marquee-child-item"><span class="dot"></span></div>
                                 <div class="marquee-child-item">
-                                    <p>Life-time Guarantes</p>
+                                    <p>Starts at $199.99</p>
                                 </div>
                                 <div class="marquee-child-item"><span class="dot"></span></div>
                                 <div class="marquee-child-item">
-                                    <p>Limited-Time Offer</p>
+                                    <p>2 Piece Suit Deal</p>
                                 </div>
                                 <div class="marquee-child-item"><span class="dot"></span></div>
                             </div>
@@ -141,19 +141,19 @@
                         <div class="topbar-right">
                             <div class="tf-languages">
                                 <select class="image-select center style-default type-languages">
-                                    <option>English</option>
+                                    <!-- <option>English</option>
                                     <option>العربية</option>
                                     <option>简体中文</option>
                                     <option>اردو</option>
-                                </select>
+                                </select> -->
                             </div>
                             <div class="tf-currencies">
                                 <select class="image-select center style-default type-currencies">
-                                    <option selected data-thumbnail="images/country/us.png">United States (USD $)
+                                    <!-- <option selected data-thumbnail="images/country/us.png">United States (USD $)
                                     </option>
                                     <option data-thumbnail="images/country/fr.png">France (EUR €)</option>
                                     <option data-thumbnail="images/country/ger.png">Germany (EUR €)</option>
-                                    <option data-thumbnail="images/country/vn.png">Vietnam (VND ₫)</option>
+                                    <option data-thumbnail="images/country/vn.png">Vietnam (VND ₫)</option> -->
                                 </select>
                             </div>
                         </div>
