--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Luxmen</title>
     <meta name="author" content="themesflat.com">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description"
-        content="Themesflat Vineta - A modern and versatile eCommerce template designed for various online stores, including fashion, furniture, electronics, and more. SEO-friendly, fast-loading, and highly customizable.">
+    <!-- <meta name="description"
+        content="Themesflat Vineta - A modern and versatile eCommerce template designed for various online stores, including fashion, furniture, electronics, and more. SEO-friendly, fast-loading, and highly customizable."> -->
 
     <!-- font -->
     <link rel="stylesheet" href="fonts/fonts.css">
