--- a/index.html
+++ b/index.html
@@ -1243,7 +1243,7 @@
                                 SALE
                             </p>
                             <h2 class="fw-medium">
-                             2  Suit Deal
+                             2 Piece Suit Deal
                             </h2>
                             <h2 class="fw-medium">
                           Starts at $199.99
@@ -2255,7 +2255,7 @@
             <div class="footer-bottom">
                 <div class="container">
                     <div class="footer-bottom-wrap">
-                        <p class="text-dark">Copyright © 2025 by <span class="fw-medium">Vineta.</span> All Rights
+                        <p class="text-dark">Copyright © 2025 by <span class="fw-medium">WHIZIFY LLC.</span> All Rights
                             Reserved.</p>
                         <!-- <ul class="tf-payment">
                             <li class="item"><img src="images/payment/EximBank.png" alt="payment"></li>
