--- a/index.html
+++ b/index.html
@@ -2082,7 +2082,7 @@
                                 <img src="images/logo/logo.png" class="logo" alt="logo">
                             </a>
                         </div>
-                        <ul class="tf-social-icon style-large">
+                        <!-- <ul class="tf-social-icon style-large">
                             <li>
                                 <a href="https://www.facebook.com/" class="social-item social-facebook">
                                     <i class="icon icon-fb"></i>
@@ -2102,7 +2102,7 @@
                                     <i class="icon icon-x"></i>
                                 </a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
             </div>
