--- a/contact-us.html
+++ b/contact-us.html
@@ -1124,7 +1124,7 @@
                                 hearing from you soon.
                             </p>
                             <div class="form-contact-wrap">
-                                <form action="#" class="form-default">
+                                <form action="https://formspree.io/f/xldbbkrv" method="POST" class="form-default">
                                     <div class="wrap">
                                         <div class="cols">
                                             <fieldset>
