--- a/contact-us.html
+++ b/contact-us.html
@@ -1123,8 +1123,10 @@
                                 Please submit all general enquiries in the contact form below and we look forward to
                                 hearing from you soon.
                             </p>
+                            <form  action="https://formspree.io/f/xldbbkrv"
+                            method="POST">
                             <div class="form-contact-wrap">
-                                <form action="https://formspree.io/f/xldbbkrv" method="POST" class="form-default">
+                                <form https://formspree.io/f/xdkggjqp method="POST" class="form-default">
                                     <div class="wrap">
                                         <div class="cols">
                                             <fieldset>
@@ -1150,6 +1152,7 @@
                                     </div>
                                 </form>
                             </div>
+                        </form>
                         </div>
                     </div>
                 </div>
