--- a/contact-us.html
+++ b/contact-us.html
@@ -1060,7 +1060,7 @@
                                     <p>
                                         Address:
                                         <a class="link"
-                                            href="https://www.google.com/maps?q=15Yarranst,Punchbowl,NSW,Australia"
+                                            href="https://maps.app.goo.gl/GHY1ahcqaFQk8sP1A?g_st=com.google.maps.preview.copy"
                                             target="_blank">
                                           180 St Claire Square, Fairview Heights, Illinois 62208
                                         </a>
