--- a/contact-us.html
+++ b/contact-us.html
@@ -58,11 +58,11 @@
                             <li><a href="https://www.instagram.com/" class="social-item social-instagram"><i
                                         class="icon icon-instagram"></i></a>
                             </li>
-                            <li><a href="https://x.com/" class="social-item social-x"><i class="icon icon-x"></i></a>
-                            </li>
-                            <li><a href="https://www.snapchat.com/" class="social-item social-snapchat"><i
+                            <!-- <li><a href="https://x.com/" class="social-item social-x"><i class="icon icon-x"></i></a>
+                            </li> -->
+                            <!-- <li><a href="https://www.snapchat.com/" class="social-item social-snapchat"><i
                                         class="icon icon-snapchat"></i></a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                     <div class="overflow-hidden">
@@ -1083,7 +1083,7 @@
                                     <p>
                                         Email:
                                         <a class="link" href="mailto:contact@vince.com">
-                                           info@luxmanformal.com
+                                        luxmenformal@gmail.com
                                         </a>
                                     </p>
                                 </li>
