--- a/index.html
+++ b/index.html
@@ -2111,7 +2111,7 @@
                     <div class="row-footer">
                         <div class="footer-col-block s1">
                             <div class="footer-heading footer-heading-mobile text-xl fw-medium">
-                               Address & Contact
+                               Addresses & Contact
                             </div>
                             <div class="tf-collapse-content">
                                 <div class="footer-contact">
@@ -2128,10 +2128,16 @@
                                                         fill="#0D0D0D" />
                                                 </svg>
                                             </span>
-                                            <a target="_blank"
-                                                href="https://www.google.com/maps?q=123Yarranst,Punchbowl,NSW2196,Australia">
-                                              180 St Claire Square, Fairview Heights, Illinois 62208
-                                            </a>
+                                            <a class="link"
+                                            href="https://maps.app.goo.gl/GHY1ahcqaFQk8sP1A?g_st=com.google.maps.preview.copy"
+                                            target="_blank">
+                                          180 St Claire Square, Fairview Heights, Illinois 62208
+                                        </a>
+                                        <a class="link"
+                                            href="https://maps.app.goo.gl/cmmoaMUBS3dzTGWs5?g_st=com.google.maps.preview.copy"
+                                            target="_blank">
+                                      2142 St Louis Galleria, St Louis, Missouri, 63117
+                                        </a>
                                         </li>
                                         <li class="item">
                                             <span class="box-icon">
@@ -2153,7 +2159,7 @@
                                                         fill="#0D0D0D" />
                                                 </svg>
                                             </span>
-                                            info@luxmenformal.com
+                                            luxmenformal@gmail.com
                                         </li>
                                     </ul>
                                     <!-- <a href="https://www.google.com/maps?q=15Yarranst,Punchbowl,NSW,Australia"
