--- a/contact-us.html
+++ b/contact-us.html
@@ -1058,18 +1058,21 @@
                             <ul class="contact-list">
                                 <li>
                                     <p>
-                                        Addresses :
+                                       ST CLAIRE SQUARE LOCATION:
                                         <a class="link"
                                             href="https://maps.app.goo.gl/GHY1ahcqaFQk8sP1A?g_st=com.google.maps.preview.copy"
                                             target="_blank">
                                           180 St Claire Square, Fairview Heights, Illinois 62208
                                         </a>
-                                        <a class="link"
-                                            href="https://maps.app.goo.gl/cmmoaMUBS3dzTGWs5?g_st=com.google.maps.preview.copy"
-                                            target="_blank">
-                                      2142 St Louis Galleria, St Louis, Missouri, 63117
-                                        </a>
                                     </p>
+                                    <p>
+                                        GALLERIA MALL LOCATION
+                                        <a class="link"
+                                        href="https://maps.app.goo.gl/cmmoaMUBS3dzTGWs5?g_st=com.google.maps.preview.copy"
+                                        target="_blank">
+                                        2142 St Louis Galleria, St Louis, Missouri, 63117
+                                    </a>
+                                </p>
                                 </li>
                                 <li>
                                     <p>
