--- a/contact-us.html
+++ b/contact-us.html
@@ -1066,7 +1066,7 @@
                                         </a>
                                     </p>
                                     <p>
-                                        GALLERIA MALL LOCATION
+                                        GALLERIA MALL LOCATION:
                                         <a class="link"
                                         href="https://maps.app.goo.gl/cmmoaMUBS3dzTGWs5?g_st=com.google.maps.preview.copy"
                                         target="_blank">
