--- a/product-detail-kid-suit.html
+++ b/product-detail-kid-suit.html
@@ -2823,13 +2823,26 @@
                     <div class="mb-notice">
                         <a href="contact-us.html" class="text-need">Need Help?</a>
                     </div>
-                    <div class="mb-contact">
-                        <p>Address: 180 St Claire Square, Fairview Heights, Illinois 62208</p>
-                    </div>
+                    <p>
+                        ST CLAIRE SQUARE LOCATION:
+                         <a class="link"
+                             href="https://maps.app.goo.gl/GHY1ahcqaFQk8sP1A?g_st=com.google.maps.preview.copy"
+                             target="_blank">
+                           180 St Claire Square, Fairview Heights, Illinois 62208
+                         </a>
+                     </p>
+                     <p>
+                         GALLERIA MALL LOCATION:
+                         <a class="link"
+                         href="https://maps.app.goo.gl/cmmoaMUBS3dzTGWs5?g_st=com.google.maps.preview.copy"
+                         target="_blank">
+                         2142 St Louis Galleria, St Louis, Missouri, 63117
+                     </a>
+                 </p>
                     <ul class="mb-info">
                         <li>
                             Email:
-                            <b class="fw-medium">info@luxmenformal.com 
+                            <b class="fw-medium">luxmenformal@gmail.com 
                             </b>
                         </li>
                         <!-- <li>
