--- a/contact-us.html
+++ b/contact-us.html
@@ -1040,12 +1040,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <!-- <div class="wg-map">
+                        <div class="wg-map">
                             <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27294.62418958524!2d151.25730233429948!3d-33.82005608618041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12ab8bc95a137f%3A0x358f04a7f6f5f6a6!2sGrotto%20Point%20Lighthouse!5e0!3m2!1sen!2s!4v1733976867160!5m2!1sen!2s"
+                                src="!1m18!1m12!1m3!1d3118.405155420511!2d-89.98492692344205!3d38.59354397179055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x887601c093a1376f%3A0x9fe779be70142987!2s180%20St%20Clair%20Square%2C%20Fairview%20Heights%2C%20IL%2062208!5e0!3m2!1sen!2sus!4v1746580718501!5m2!1sen!2sus"
                                 class="map" style="border:none;" allowfullscreen="" loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade"></iframe>
-                        </div> -->
+                        </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="content-left">
