--- a/contact-us.html
+++ b/contact-us.html
@@ -1172,7 +1172,7 @@
 
 
         <!-- Footer -->
-        <footer id="footer" class="footer-default xl-pb-70">
+        <!-- <footer id="footer" class="footer-default xl-pb-70">
             <div class="footer-top">
                 <div class="container">
                     <div class="footer-top-wrap">
@@ -1204,7 +1204,7 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- <div class="footer-body">
                 <div class="container">
                     <div class="row-footer">
