--- a/contact-us.html
+++ b/contact-us.html
@@ -1148,7 +1148,7 @@
                                         <div class="cols">
                                             <fieldset class="textarea">
                                                 <label for="mess">Message</label>
-                                                <input id="mess" required>
+                                                <input id="username" type="text" name="username" required>
                                             </fieldset>
                                         </div>
                                         <div class="button-submit">
