--- a/contact-us.html
+++ b/contact-us.html
@@ -1133,31 +1133,34 @@
                             <form  action="https://formspree.io/f/xldbbkrv"
                             method="POST">
                             <div class="form-contact-wrap">
-                                <form https://formspree.io/f/xdkggjqp method="POST" class="form-default">
-                                    <div class="wrap">
-                                        <div class="cols">
-                                            <fieldset>
-                                                <label for="username">Your name*</label>
-                                                <input id="username" type="text" name="username" required>
-                                            </fieldset>
-                                            <fieldset>
-                                                <label for="email">Your email*</label>
-                                                <input id="email" type="email" name="email" required>
-                                            </fieldset>
-                                        </div>
-                                        <div class="cols">
-                                            <fieldset class="textarea">
-                                                <label for="mess">Message</label>
-                                                <input id="username" type="text" name="username" required>
-                                            </fieldset>
-                                        </div>
-                                        <div class="button-submit">
-                                            <button class="tf-btn animate-btn" type="submit">
-                                                Send
-                                            </button>
+                                <form action="https://formspree.io/f/xldbbkrv" method="POST" class="form-default">
+                                    <div class="form-contact-wrap">
+                                        <div class="wrap">
+                                            <div class="cols">
+                                                <fieldset>
+                                                    <label for="username">Your name*</label>
+                                                    <input id="username" type="text" name="username" required>
+                                                </fieldset>
+                                                <fieldset>
+                                                    <label for="email">Your email*</label>
+                                                    <input id="email" type="email" name="email" required>
+                                                </fieldset>
+                                            </div>
+                                            <div class="cols">
+                                                <fieldset class="textarea">
+                                                    <label for="mess">Message</label>
+                                                    <textarea id="mess" name="message" required></textarea>
+                                                </fieldset>
+                                            </div>
+                                            <div class="button-submit">
+                                                <button class="tf-btn animate-btn" type="submit">
+                                                    Send
+                                                </button>
+                                            </div>
                                         </div>
                                     </div>
                                 </form>
+                                
                             </div>
                         </form>
                         </div>
