--- a/index.html
+++ b/index.html
@@ -1227,6 +1227,46 @@
          <br>
          <br>
          <br>
+         <!-- Custom Carousel -->
+<div class="pt-20">
+    <div class="container">
+        <div dir="ltr" class="swiper custom-carousel-swiper" data-swiper='{
+            "slidesPerView": 1,
+            "spaceBetween": 16,
+            "loop": true,
+            "autoplay": { "delay": 4000 },
+            "pagination": { "el": ".custom-carousel-pagination", "clickable": true },
+            "breakpoints": {
+                "640": { "slidesPerView": 2 },
+                "768": { "slidesPerView": 3 },
+                "1024": { "slidesPerView": 4 }
+            }
+        }'>
+            <div class="swiper-wrapper">
+                <!-- Slide 1 -->
+                <div class="swiper-slide">
+                    <img src="images/carousel/item1.jpg" alt="Item 1" class="w-full h-auto rounded-lg shadow">
+                </div>
+                <!-- Slide 2 -->
+                <div class="swiper-slide">
+                    <img src="images/carousel/item2.jpg" alt="Item 2" class="w-full h-auto rounded-lg shadow">
+                </div>
+                <!-- Slide 3 -->
+                <div class="swiper-slide">
+                    <img src="images/carousel/item3.jpg" alt="Item 3" class="w-full h-auto rounded-lg shadow">
+                </div>
+                <!-- Slide 4 -->
+                <div class="swiper-slide">
+                    <img src="images/carousel/item4.jpg" alt="Item 4" class="w-full h-auto rounded-lg shadow">
+                </div>
+            </div>
+            <div class="custom-carousel-pagination text-center mt-4"></div>
+        </div>
+    </div>
+</div>
+<!-- /Custom Carousel -->
+ <br>
+ <br>
 
 
         <!-- Banner Countdown -->
