--- a/index.html
+++ b/index.html
@@ -1245,7 +1245,7 @@
             <div class="swiper-wrapper">
                 <!-- Slide 1 -->
                 <div class="swiper-slide">
-                    <img src="images/carousel/item1.jpg" alt="Item 1" class="w-full h-auto rounded-lg shadow">
+                    <img src="images/cls-categories/fashion/kid.jpg" alt="Item 1" class="w-full h-auto rounded-lg shadow">
                 </div>
                 <!-- Slide 2 -->
                 <div class="swiper-slide">
