--- a/index.html
+++ b/index.html
@@ -1227,44 +1227,44 @@
          <br>
          <br>
          <br>
-         <!-- Custom Carousel -->
-<div class="pt-20">
+         <!-- Horizontal Image Section -->
+<div class="pt-24">
     <div class="container">
-        <div dir="ltr" class="swiper custom-carousel-swiper" data-swiper='{
-            "slidesPerView": 1,
-            "spaceBetween": 16,
-            "loop": true,
-            "autoplay": { "delay": 4000 },
-            "pagination": { "el": ".custom-carousel-pagination", "clickable": true },
-            "breakpoints": {
-                "640": { "slidesPerView": 2 },
-                "768": { "slidesPerView": 3 },
-                "1024": { "slidesPerView": 4 }
-            }
-        }'>
-            <div class="swiper-wrapper">
-                <!-- Slide 1 -->
-                <div class="swiper-slide">
-                    <img src="images/cls-categories/fashion/store1.jpg" alt="Item 1" class="w-full h-auto rounded-lg shadow">
-                </div>
-                <!-- Slide 2 -->
-                <div class="swiper-slide">
-                    <img src="images/cls-categories/fashion/store2.jpg" alt="Item 2" class="w-full h-auto rounded-lg shadow">
-                </div>
-                <!-- Slide 3 -->
-                <div class="swiper-slide">
-                    <img src="images/carousel/item3.jpg" alt="Item 3" class="w-full h-auto rounded-lg shadow">
-                </div>
-                <!-- Slide 4 -->
-                <div class="swiper-slide">
-                    <img src="images/carousel/item4.jpg" alt="Item 4" class="w-full h-auto rounded-lg shadow">
+        <div class="row g-3 g-sm-4 justify-content-center">
+            <!-- Card 1 -->
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <div class="wg-cls style-abs hover-img">
+                    <a href="#" class="image d-block" style="aspect-ratio: 3 / 2; overflow: hidden;">
+                        <img src="images/cls-categories/fashion/store1.jpg" alt="Horizontal 1" class="w-100 h-100 object-cover">
+                    </a>
+                    <div class="cls-btn text-center">
+                        <a href="#" class="tf-btn btn-cls btn-white hover-dark hover-icon-2">
+                            Lookbook
+                            <i class="icon icon-arrow-top-left"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
-            <div class="custom-carousel-pagination text-center mt-4"></div>
+            <!-- Card 2 -->
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <div class="wg-cls style-abs hover-img">
+                    <a href="#" class="image d-block" style="aspect-ratio: 3 / 2; overflow: hidden;">
+                        <img src="images/horizontal/item2.jpg" alt="Horizontal 2" class="w-100 h-100 object-cover">
+                    </a>
+                    <div class="cls-btn text-center">
+                        <a href="#" class="tf-btn btn-cls btn-white hover-dark hover-icon-2">
+                            New Arrivals
+                            <i class="icon icon-arrow-top-left"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!-- Add more cards as needed -->
         </div>
     </div>
 </div>
-<!-- /Custom Carousel -->
+<!-- /Horizontal Image Section -->
+
  <br>
  <br>
 
