--- a/index.html
+++ b/index.html
@@ -1249,7 +1249,7 @@
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <div class="wg-cls style-abs hover-img">
                     <a href="#" class="image d-block" style="aspect-ratio: 3 / 2; overflow: hidden;">
-                        <img src="images/horizontal/item2.jpg" alt="Horizontal 2" class="w-100 h-100 object-cover">
+                        <img src="images/cls-categories/fashion/store2.jpg"  alt="Horizontal 2" class="w-100 h-100 object-cover">
                     </a>
                     <div class="cls-btn text-center">
                         <a href="#" class="tf-btn btn-cls btn-white hover-dark hover-icon-2">
