--- a/index.html
+++ b/index.html
@@ -1253,17 +1253,17 @@
                         <!-- item 1 -->
                         <div class="swiper-slide">
                             <div class="wg-cls style-abs hover-img" style="aspect-ratio: 3 / 2; overflow: hidden;">
-                                <a href="shop-default.html" class="image img-style d-block h-100">
+                                <a  class="image img-style d-block h-100">
                                     <img src="images/cls-categories/fashion/store1.jpg"
                                         data-src="images/cls-categories/fashion/store1.jpg" alt=""
                                         class="lazyload w-100 h-100" style="object-fit: cover;">
                                 </a>
                                 <div class="cls-btn text-center">
-                                    <a href="shop-default.html"
+                                    <!-- <a href="shop-default.html"
                                         class="tf-btn btn-cls btn-white hover-dark hover-icon-2">
                                         Men Suits
                                         <i class="icon icon-arrow-top-left"></i>
-                                    </a>
+                                    </a> -->
                                 </div>
                             </div>
                         </div>
@@ -1271,17 +1271,17 @@
                         <!-- item 2 -->
                         <div class="swiper-slide">
                             <div class="wg-cls style-abs hover-img" style="aspect-ratio: 3 / 2; overflow: hidden;">
-                                <a href="product-detail-ties.html" class="image img-style d-block h-100">
+                                <a  class="image img-style d-block h-100">
                                     <img src="images/cls-categories/fashion/store2.jpg"
-                                        data-src="images/cls-categories/fashion/accessories.jpg" alt=""
+                                        data-src="images/cls-categories/fashion/store2.jpg" alt=""
                                         class="lazyload w-100 h-100" style="object-fit: cover;">
                                 </a>
                                 <div class="cls-btn text-center">
-                                    <a href="product-detail-ties.html"
+                                    <!-- <a href="product-detail-ties.html"
                                         class="tf-btn btn-cls btn-white hover-dark hover-icon-2">
                                         Ties
                                         <i class="icon icon-arrow-top-left"></i>
-                                    </a>
+                                    </a> -->
                                 </div>
                             </div>
                         </div>
