--- a/index.html
+++ b/index.html
@@ -1368,10 +1368,17 @@
                                 SALE
                             </p>
                             <h2 class="fw-medium">
-                             2 Piece Suit Deal
+                            Suit Deal
                             </h2>
+                            <h3>
+                                Includes:
+                                2 piece suit 
+                                Dress Shirt
+                                Tie or Bow-Tie 
+                                Pocket Square 
+                            </h3>
                             <h2 class="fw-medium">
-                          Starts at $199.99
+                          Starting at $199.99
                              </h2>
                             <!-- <p class="sub text-md fw-medium">
                                 WITH PROMOTE CODE: 12D34E
