--- a/index.html
+++ b/index.html
@@ -1368,18 +1368,20 @@
                                 SALE
                             </p>
                             <h2 class="fw-medium">
-                            Suit Deal
+                                Suit Deal
                             </h2>
-                            <h3>
-                                Includes:
-                                2 piece suit 
-                                Dress Shirt
-                                Tie or Bow-Tie 
-                                Pocket Square 
-                            </h3>
+                            
+                            <h3>Includes:</h3>
+                            <ul style="padding-left: 20px; margin-bottom: 1rem;">
+                                <li>2 piece suit</li>
+                                <li>Dress Shirt</li>
+                                <li>Tie or Bow-Tie</li>
+                                <li>Pocket Square</li>
+                            </ul>
+                            
                             <h2 class="fw-medium">
-                          Starting at $199.99
-                             </h2>
+                                Starting at $199.99
+                            </h2>
                             <!-- <p class="sub text-md fw-medium">
                                 WITH PROMOTE CODE: 12D34E
                             </p> -->
