--- a/contact-us.html
+++ b/contact-us.html
@@ -1076,9 +1076,7 @@
                                 <li>
                                     <p>
                                         Phone number:
-                                        <a class="link" href="tel:123456">
-                                         N/A
-                                        </a>
+                                        <a href="tel:9035080694">+1 (903) 508-0694</a>
                                     </p>
                                 </li>
                                 <li>
