--- a/index.html
+++ b/index.html
@@ -1382,6 +1382,9 @@
                             <h4 class="fw-medium">
                                 Starting at $199.99
                             </h4>
+                            <h4 class="fw-medium">
+                              Ask for our Wedding Special
+                            </h4>
                             <!-- <p class="sub text-md fw-medium">
                                 WITH PROMOTE CODE: 12D34E
                             </p> -->
@@ -2283,7 +2286,7 @@
                                                         fill="#0D0D0D" />
                                                 </svg>
                                             </span>
-                                            <a href="tel:18888383022">N/A</a>
+                                            <a href="tel:9035080694">+1 (903) 508-0694</a>
                                         </li>
                                         <li class="item">
                                             <span class="box-icon">
