--- a/index.html
+++ b/index.html
@@ -1382,9 +1382,9 @@
                             <h4 class="fw-medium">
                                 Starting at $199.99
                             </h4>
-                            <h6 class="fw-medium">
-                              Ask f
-                            </h6>
+                          <p>
+                            Ask for our Wedding Special
+                          </p>
                             <!-- <p class="sub text-md fw-medium">
                                 WITH PROMOTE CODE: 12D34E
                             </p> -->
