--- a/index.html
+++ b/index.html
@@ -1364,14 +1364,14 @@
                     </div>
                     <div class="banner-content text-center" style="max-width: 600px; margin: 0 auto;">
                         <div class="box-title wow fadeInUp">
-                            <p class="season text-md fw-medium">
+                            <!-- <p class="season text-md fw-medium">
                                 SALE
-                            </p>
+                            </p> -->
                             <h4 class="fw-medium">
                                 Suit Deal
                             </h4>
         
-                            <h4>Includes:</h4>
+                            <p>Includes:</p>
                             <ul style="padding-left: 0; list-style-position: inside; margin-bottom: 1rem;">
                                 <li>2 piece suit</li>
                                 <li>Dress Shirt</li>
