--- a/shop-default.html
+++ b/shop-default.html
@@ -2863,6 +2863,10 @@
                          2142 St Louis Galleria, St Louis, Missouri, 63117
                      </a>
                  </p>
+                 <p>
+                    Phone number:
+                    <a href="tel:9035080694">+1 (903) 508-0694</a>
+                </p>
                     <ul class="mb-info">
                         <li>
                             Email:
@@ -2898,6 +2902,8 @@
             </div>
         </div>
     </div>
+    
+                    
 
     <!-- /mobile menu -->
 
