--- a/product-detail-2.html
+++ b/product-detail-2.html
@@ -2837,6 +2837,10 @@
                          2142 St Louis Galleria, St Louis, Missouri, 63117
                      </a>
                  </p>
+                 <p>
+                    Phone number:
+                    <a href="tel:9035080694">+1 (903) 508-0694</a>
+                </p>
                     <ul class="mb-info">
                         <li>
                             Email:
