--- a/product-detail-shoes.html
+++ b/product-detail-shoes.html
@@ -2757,7 +2757,6 @@
     <!-- /modal demo -->
 
     <!-- mobile menu -->
-
     <div class="offcanvas offcanvas-start canvas-mb" id="mobileMenu">
         <button class="icon-close icon-close-popup" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         <div class="mb-canvas-content">
@@ -2840,6 +2839,10 @@
                          2142 St Louis Galleria, St Louis, Missouri, 63117
                      </a>
                  </p>
+                 <p>
+                    Phone number:
+                    <a href="tel:9035080694">+1 (903) 508-0694</a>
+                </p>
                     <ul class="mb-info">
                         <li>
                             Email:
