--- a/about-us.html
+++ b/about-us.html
@@ -58,11 +58,11 @@
                             <li><a href="https://www.instagram.com/" class="social-item social-instagram"><i
                                         class="icon icon-instagram"></i></a>
                             </li>
-                            <li><a href="https://x.com/" class="social-item social-x"><i class="icon icon-x"></i></a>
+                            <!-- <li><a href="https://x.com/" class="social-item social-x"><i class="icon icon-x"></i></a>
                             </li>
                             <li><a href="https://www.snapchat.com/" class="social-item social-snapchat"><i
                                         class="icon icon-snapchat"></i></a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                     <div class="overflow-hidden">
