--- a/product-detail-6.html
+++ b/product-detail-6.html
@@ -50,7 +50,7 @@
     <div id="wrapper">
 
         <!-- Top Bar-->
-        <div class="tf-topbar bg-dark-5 topbar-bg">
+     <div class="tf-topbar bg-dark-5 topbar-bg">
             <div class="container">
                 <div class="topbar-wraper">
                     <div class="d-none d-xl-block flex-shrink-0">
@@ -60,11 +60,11 @@
                             <li><a href="https://www.instagram.com/" class="social-item social-instagram"><i
                                         class="icon icon-instagram"></i></a>
                             </li>
-                            <li><a href="https://x.com/" class="social-item social-x"><i class="icon icon-x"></i></a>
+                            <!-- <li><a href="https://x.com/" class="social-item social-x"><i class="icon icon-x"></i></a>
                             </li>
                             <li><a href="https://www.snapchat.com/" class="social-item social-snapchat"><i
                                         class="icon icon-snapchat"></i></a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                     <div class="overflow-hidden">
