--- a/contact-us.html
+++ b/contact-us.html
@@ -48,19 +48,19 @@
     <div id="wrapper">
 
         <!-- Top Bar-->
-        <div class="tf-topbar bg-dark-5 topbar-bg">
+         <div class="tf-topbar bg-dark-5 topbar-bg">
             <div class="container">
                 <div class="topbar-wraper">
                     <div class="d-none d-xl-block flex-shrink-0">
                         <ul class="tf-social-icon topbar-left">
                             <li><a href="https://www.facebook.com/" class="social-item social-facebook"><i
                                         class="icon icon-fb"></i></a></li>
-                            <li><a href="https://www.instagram.com/" class="social-item social-instagram"><i
+                            <li><a href="https://www.instagram.com/luxmenwear/?next=%2F/" class="social-item social-instagram"><i
                                         class="icon icon-instagram"></i></a>
                             </li>
                             <!-- <li><a href="https://x.com/" class="social-item social-x"><i class="icon icon-x"></i></a>
-                            </li> -->
-                            <!-- <li><a href="https://www.snapchat.com/" class="social-item social-snapchat"><i
+                            </li>
+                            <li><a href="https://www.snapchat.com/" class="social-item social-snapchat"><i
                                         class="icon icon-snapchat"></i></a>
                             </li> -->
                         </ul>
@@ -139,19 +139,19 @@
                         <div class="topbar-right">
                             <div class="tf-languages">
                                 <select class="image-select center style-default type-languages">
-                                    <option>English</option>
+                                    <!-- <option>English</option>
                                     <option>العربية</option>
                                     <option>简体中文</option>
                                     <option>اردو</option>
-                                </select>
+                                </select> -->
                             </div>
                             <div class="tf-currencies">
                                 <select class="image-select center style-default type-currencies">
-                                    <option selected data-thumbnail="images/country/us.png">United States (USD $)
+                                    <!-- <option selected data-thumbnail="images/country/us.png">United States (USD $)
                                     </option>
                                     <option data-thumbnail="images/country/fr.png">France (EUR €)</option>
                                     <option data-thumbnail="images/country/ger.png">Germany (EUR €)</option>
-                                    <option data-thumbnail="images/country/vn.png">Vietnam (VND ₫)</option>
+                                    <option data-thumbnail="images/country/vn.png">Vietnam (VND ₫)</option> -->
                                 </select>
                             </div>
                         </div>
