--- a/product-detail-bow-tie.html
+++ b/product-detail-bow-tie.html
@@ -50,14 +50,14 @@
     <div id="wrapper">
 
         <!-- Top Bar-->
-        <div class="tf-topbar bg-dark-5 topbar-bg">
+          <div class="tf-topbar bg-dark-5 topbar-bg">
             <div class="container">
                 <div class="topbar-wraper">
                     <div class="d-none d-xl-block flex-shrink-0">
                         <ul class="tf-social-icon topbar-left">
                             <li><a href="https://www.facebook.com/" class="social-item social-facebook"><i
                                         class="icon icon-fb"></i></a></li>
-                            <li><a href="https://www.instagram.com/" class="social-item social-instagram"><i
+                            <li><a href="https://www.instagram.com/luxmenwear/?next=%2F/" class="social-item social-instagram"><i
                                         class="icon icon-instagram"></i></a>
                             </li>
                             <!-- <li><a href="https://x.com/" class="social-item social-x"><i class="icon icon-x"></i></a>
