--- a/index.html
+++ b/index.html
@@ -2310,11 +2310,11 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="footer-inner-wrap footer-col-block s2">
-                            <div class="footer-heading footer-heading-mobile text-xl fw-medium">
+                        <!-- <div class="footer-inner-wrap footer-col-block s2"> -->
+                            <!-- <div class="footer-heading footer-heading-mobile text-xl fw-medium">
                                 Subscribe Newsletter
-                            </div>
-                            <div class="tf-collapse-content">
+                            </div> -->
+                            <!-- <div class="tf-collapse-content">
                                 <div class="footer-newsletter">
                                     <p>
                                         We invite you to register to read the latest news, offers and events about
@@ -2349,7 +2349,7 @@
                                     </form>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="footer-inner-wrap s3">
                             <div class="footer-col-block inner-col">
                                 <div class="footer-heading footer-heading-mobile text-xl fw-medium">About Us</div>
