--- a/product-detail-3.html
+++ b/product-detail-3.html
@@ -1523,7 +1523,7 @@
         </section> -->
         <!-- /Product Main -->
         <!-- Product Description -->
-        <section class="flat-spacing pt-0">
+           <section class="flat-spacing pt-0">
             <div class="container">
                 <div class="widget-accordion wd-product-descriptions">
                     <div class="accordion-title collapsed" data-bs-target="#description" data-bs-toggle="collapse"
@@ -1574,7 +1574,12 @@
                         <span class="icon icon-arrow-down"></span>
                     </div>
                     <div id="returnPolicies" class="collapse">
-                      <p>Due to the nature of our products, all sales are final. We are unable to accept returns or offer refunds on any items. We encourage our customers to carefully review their purchase before completing the transaction to ensure satisfaction.</p>
+                      <p>No refunds No Exceptions </p>
+                      <li>Exchange only within 7 days of purchase with a receipt</li>
+                      <li>Merchandise in same condition</li>
+                      <li>Exchange only only with the same value or more</li>
+                      <li>Absolutely no refund or exchange on any altered item</li>
+                      <li>No refund on layaways</li>
                     </div>
                 </div>
             </div>
