--- a/product-detail-shoes.html
+++ b/product-detail-shoes.html
@@ -1576,8 +1576,13 @@
                         <span>Return Policies</span>
                         <span class="icon icon-arrow-down"></span>
                     </div>
-                    <div id="returnPolicies" class="collapse">
-                      <p>Due to the nature of our products, all sales are final. We are unable to accept returns or offer refunds on any items. We encourage our customers to carefully review their purchase before completing the transaction to ensure satisfaction.</p>
+                  <div id="returnPolicies" class="collapse">
+                      <p>No refunds No Exceptions </p>
+                      <li>Exchange only within 7 days of purchase with a receipt</li>
+                      <li>Merchandise in same condition</li>
+                      <li>Exchange only only with the same value or more</li>
+                      <li>Absolutely no refund or exchange on any altered item</li>
+                      <li>No refund on layaways</li>
                     </div>
                 </div>
             </div>
